week 2 completed - css

--- a/site/index.html
+++ b/site/index.html
@@ -2,9 +2,77 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Hello coursera</title>
+	<title>Venkatesha Prasad S</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
-<h1> Hello coursera! Welcome...</h1>
+<h2 align="center"> HI..WELCOME TO MY PAGE..!</h2>
+<ul id="top">
+      <!-- Link to every section in the page -->
+      <li><a href="#section1">Introduction</a></li>
+      <li><a href="#section2">Basic Details</a></li>
+      <li><a href="#section3">Skills</a></li>
+      <li><a href="#section4">Profiles</a></li>
+      <li><a href="#section5">#section5</a></li>
+      <li><a href="#section6">#section6</a></li>
+</ul>
+<h2 id="section1"><u> Introduction : </u></h2>
+<img src="venkat.jpg" alt="my image" class="center">
+<p> I am Venkatesha Prasad S. I am working as a Assistant systems engineer at &nbsp;Tata&nbsp;Consultancy&nbsp;services.<br><br>
+<span><b><u> Email Id</u> </b>: venkatvp2000@gmail.com</span></p>
+<div id="section2"> <h2> <u>Basic Details :</u>  </h2></div>
+<div id="Basic">
+<div><b>DOB </b> : 28/07/2000 </div>
+<div><b>Gender </b> :  Male </div>
+<div><b> Nationality </b>: Indian </div>
+<div><b> Profession </b>: Full time </div>
+</div>
+<h2 id="section3"><u>Skills :</u></h2>
+<ol>
+	<li><b>Languages</b>
+		<ul>
+			<li>Python</li>
+			<li>C</li>
+		</ul>
+	</li>
+	<li><b>Database</b>
+		<ul>
+			<li>MySQL</li>
+			<li>MongoDB</li>
+			<li>Neo4J</li>
+		</ul>
+	</li>
+	<li><b>Other Tools</b>
+		<ul>
+			<li>MS-Excel</li>
+			<li>MS Visual Code</li>
+			<li>Gretl</li>
+			<li>Tableau</li>
+		</ul>
+	</li>
+	<li><b>Interests</b>
+		<ul>
+			<li>Machine Learning</li>
+			<li>Deep Learning</li>
+			<li>Sports Analytics</li>
+			<li>Data Science</li>
+			<li>Web Development</li>
+		</ul>
+	</li>
+</ol>
+
+<h2 id="section4"><u>Profiles : </u></h2>
+<ul>
+	<li><a href="https://www.linkedin.com/in/venkateshaprasad/" title="LinkedIN" target="_blank">LinkedIn</a></li>
+	<li><a href="https://mail.google.com/" title="gmail" target="_blank">Gmail - venkatvp2000@gmail.com</a></li>
+	<li><a href="https://github.com/iam-venkat03" title="github" target="_blank">Github</a></li>
+	<li><a href="https://medium.com/@venkatvp2000" title="medium" target="_blank">Medium</a></li>
+</ul>
+<footer id = "bottom">
+	<hr><hr>
+      <p >Tech Support: venkatvp2000@gmail.com &copy;</p>
+      <li><a href="#top" title="Go top"> Go to TOP! </a></li>
+</footer>
 </body>
 </html>
