box model week 2

--- a/site/index.html
+++ b/site/index.html
@@ -4,28 +4,33 @@
 	<meta charset="utf-8">
 	<title>Venkatesha Prasad S</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<style>* {
+		box-sizing: border-box;
+	}
+	</style>
+	
 </head>
 
 <body>
-<h2 align="center"> HI..WELCOME TO MY PAGE..!</h2>
+<h2 id = "heading"align="center"> HELLO. I AM VENKATESHA PRASAD !</h2>
 <ul id="top">
       <!-- Link to every section in the page -->
-      <li><a href="#section1">Introduction</a></li>
-      <li><a href="#section2">Basic Details</a></li>
-      <li><a href="#section3">Skills</a></li>
-      <li><a href="#section4">Profiles</a></li>
+      <li><a href="#section1">I N T R O D U C T I O N </a></li>
+      <li><a href="#section2">B A S I C D E T A I L S</a></li>
+      <li><a href="#section3">S K I L L S</a></li>
+      <li><a href="#section4">P R O F I L E S </a></li>
       <li><a href="#section5">#section5</a></li>
       <li><a href="#section6">#section6</a></li>
 </ul>
 <h2 id="section1"><u> Introduction : </u></h2>
-<img src="venkat.jpg" alt="my image" class="center">
-<p> I am Venkatesha Prasad S. I am working as a Assistant systems engineer at &nbsp;Tata&nbsp;Consultancy&nbsp;services.<br><br>
+<img src="venkat.jpg" alt="my image" class="center"></img>
+<p id="intro"> I am Venkatesha Prasad S. I am working as a Assistant systems engineer at &nbsp;Tata&nbsp;Consultancy&nbsp;services.<br><br>
 <span><b><u> Email Id</u> </b>: venkatvp2000@gmail.com</span></p>
-<div id="section2"> <h2> <u>Basic Details :</u>  </h2></div>
+<div id="section2"> <h2> <u> Basic Details :</u>  </h2></div>
 <div id="Basic">
-<div><b>DOB </b> : 28/07/2000 </div>
-<div><b>Gender </b> :  Male </div>
-<div><b> Nationality </b>: Indian </div>
+<div><b> DOB </b> : 28/07/2000 </div><br>
+<div><b> Gender </b> :  Male </div><br>
+<div><b> Nationality </b>: Indian </div><br>
 <div><b> Profession </b>: Full time </div>
 </div>
 <h2 id="section3"><u>Skills :</u></h2>
@@ -35,14 +40,14 @@
 			<li>Python</li>
 			<li>C</li>
 		</ul>
-	</li>
+	</li><br/>
 	<li><b>Database</b>
 		<ul>
 			<li>MySQL</li>
 			<li>MongoDB</li>
 			<li>Neo4J</li>
 		</ul>
-	</li>
+	</li><br/>
 	<li><b>Other Tools</b>
 		<ul>
 			<li>MS-Excel</li>
@@ -50,7 +55,7 @@
 			<li>Gretl</li>
 			<li>Tableau</li>
 		</ul>
-	</li>
+	</li><br/>
 	<li><b>Interests</b>
 		<ul>
 			<li>Machine Learning</li>
